# traceback

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  repository_format_v0.md  traceback_backup_tool_srs.md
.github/workflows/: ci.yml  release.yml
crates/traceback-cli/: Cargo.toml
crates/traceback-cli/src/: lib.rs  main.rs  tui.rs
crates/traceback-cli/tests/: backup.rs  blame.rs  check.rs  diff.rs  doctor.rs  encryption.rs  explain.rs  ignore.rs  init.rs  maintenance.rs  output_modes.rs  policy.rs  recover.rs  rehearse.rs  remote.rs  resilience.rs  restore.rs  snapshots.rs
crates/traceback-repo/: Cargo.toml
crates/traceback-repo/src/: accounting.rs  blame.rs  check.rs  chunk.rs  diff.rs  doctor.rs  explain.rs  history.rs  ignore.rs  lib.rs  maintenance.rs  manifest.rs  recovery.rs  restore.rs  storage.rs
crates/traceback-scan/: Cargo.toml
crates/traceback-scan/src/: lib.rs
