[package]
name = "traceback-cli"
version = "0.1.0"
edition = "2024"
description = "Explainable backup and restore tool"
license = "MIT"

[[bin]]
name = "traceback"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
traceback-repo = { path = "../traceback-repo" }

[dev-dependencies]
tempfile = "3.23"
