[package]
name = "traceback-cli"
version = "0.1.0"
edition = "2024"
description = "Explainable backup and restore tool"
license = "MIT"

[[bin]]
name = "traceback"
path = "src/main.rs"

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
traceback-repo = { path = "../traceback-repo" }
traceback-scan = { path = "../traceback-scan" }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.23"
