[package]
name = "traceback-cli"
version = "0.1.0"
edition = "2024"
description = "Explainable backup and restore tool"
license = "MIT"

[[bin]]
name = "traceback"
path = "src/main.rs"

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.9"
traceback-repo = { path = "../traceback-repo" }
traceback-scan = { path = "../traceback-scan" }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23"
