[package]
name = "traceback-repo"
version = "0.1.0"
edition = "2024"
description = "Local repository support for TraceBack"
license = "MIT"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
blake3 = "1.8"
chacha20poly1305 = "0.10"
filetime = "0.2"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.9"
unicode-normalization = "0.1"
uuid = { version = "1.18", features = ["v4"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.23"
